# xdpyprobe

./: .gitignore  Makefile.am  README.org  configure.ac  guix.scm
src/: xdpyprobe.c
